--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ body {
 
 .container-circles {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 3rem;
 }
 
@@ -135,4 +135,56 @@ body {
 .appreciation {
   margin: 0;
   text-align: center;
+}
+
+@media only screen and (min-width: 1440px) {
+  .container-one,
+  .container-two {
+    width: 41rem;
+    height: 41rem;
+    border-radius: 35px;
+    padding: 3rem 3.5rem;
+  }
+
+  .container-one h1 {
+    margin-top: 3.45rem;
+    margin-bottom: 1.3rem;
+  }
+
+  .container-one p {
+    line-height: 1.7;
+    margin: 0;
+    /* margin-top: 0.1rem; */
+  }
+
+  .container-circles {
+    justify-content: space-between;
+  }
+
+  .circle {
+    height: 5rem;
+    width: 5rem;
+  }
+
+  .container-two img {
+    height: 105px;
+    margin-top: 1rem;
+  }
+
+  .result {
+    margin: 0;
+    margin-top: 3rem;
+    margin-bottom: 3.3rem;
+  }
+
+  .thanks {
+    margin: 0;
+  }
+
+  .appreciation {
+    margin: 0;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    line-height: 1.7;
+  }
 }
